// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h6
  className="sc-bdvvtL fObIvQ sinoui-typography sinoui-typography--subtitle1"
  color="textPrimary"
  type="subtitle1"
>
  Subtitle1
</h6>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdvvtL fObIvQ sinoui-typography sinoui-typography--subtitle1"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h2>,
  <h6
    className="sc-bdvvtL fLRvgw sinoui-typography sinoui-typography--subtitle1"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdvvtL juccOB sinoui-typography sinoui-typography--subtitle1"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdvvtL jkRwNw sinoui-typography sinoui-typography--subtitle1"
    color="success"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdvvtL eoYkbk sinoui-typography sinoui-typography--subtitle1 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h6
    className="sc-bdvvtL fObIvQ sinoui-typography sinoui-typography--subtitle1"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdvvtL fvtqeH sinoui-typography sinoui-typography--subtitle1"
    color="primary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdvvtL pDyOM sinoui-typography sinoui-typography--subtitle1"
    color="secondary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdvvtL fObIvQ sinoui-typography sinoui-typography--subtitle1"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdvvtL guqVGN sinoui-typography sinoui-typography--subtitle1"
    color="textSecondary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdvvtL jAAHLZ sinoui-typography sinoui-typography--subtitle1"
    color="error"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdvvtL gVogCg sinoui-typography sinoui-typography--subtitle1"
    color="warning"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdvvtL jkRwNw sinoui-typography sinoui-typography--subtitle1"
    color="success"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdvvtL eALmRs sinoui-typography sinoui-typography--subtitle1"
    color="info"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
]
`;
